@@ -1,5 +1,6 @@
 \begin{document}
-
+\newboolean{glimmertools}
+\setboolean{glimmertools}{@dotools@}
 \frontmatter
 \title{GLIMMER {\glimmerver} Documentation}
 \author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk}, Ian
@@ -11,6 +12,14 @@
 \chapter{User Guide}
 \newcommand{\dir}{ug}
 \input{\dir/ug.tex}
+
+\ifthenelse{\boolean{glimmertools}}
+{
+\chapter{Tools}
+\renewcommand{\dir}{tg}
+\input{\dir/tg.tex}
+}
+{}
 
 \chapter{Numerics}
 \renewcommand{\dir}{num}
