@@ -1,0 +1,15 @@
+\newcommand{\dir}{tg}
+
+\pagestyle{myheadings}
+\markright{GLIMMER {\glimmerver} Tools}
+
+\begin{document}
+\title{GLIMMER {\glimmerver} Tools}
+\author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk} \and Ian Rutt\thanks{I.C.Rutt@bristol.ac.uk}}
+\maketitle
+\tableofcontents
+\newpage
+
+\input{\dir/tg.tex}
+\bibliography{glimmer}
+\end{document}
