@@ -1,3 +1,10 @@
+2005-11-04 Magnus Hagdorn
+ * configure.in: optionally build tools guide
+ * doc/Makefile.am: use implicit rules
+ * glimmer.tex.in: autogenerate glimmer.tex
+ * tg*: structure for tools guide
+ * packages.tex: use ifthenelse
+
 2005-10-30 Magnus Hagdorn
  * glimmer_CFproj.f90: type definitions of individual projections are now
    public.
